# Parallel-Image-Dehazing

./: README.md
csc3002_new/: .gitattributes  .gitignore  CMakeLists.txt  OpenCLInfo.cpp  README.md  dehaze.cl  dehaze.hpp  dehazeApprox.cl  dehazeHalf.cl  dehazeSeq.cl  dehazeSeq.hpp  imageMetrics.py  outputImage.cpp  outputImage.hpp  outputImageApprox.cpp  outputImageApprox.hpp  outputImageHalf.cpp  outputImageHalf.hpp  outputImageSeq.cpp  outputImageSeq.hpp  showImage.py  ssimCalculation.py  stb_image.cpp  stb_image.hpp  stb_image_write.cpp  stb_image_write.hpp
csc3002_new/headers/: atmosphere.hpp  clGetDarkChannel.hpp  dehaze.hpp  radiance.hpp  transmissionEstimate.hpp
csc3002_new/practiceOpenCL/: helloWorld.cpp  vectorAddition.cpp
